fixed slider alignment

--- a/F/f.css
+++ b/F/f.css
@@ -1,12 +1,12 @@
-        @media only screen and (min-width: 600px){
-            .ui-page {
-                width: 600px !important;
-                margin: 0 auto !important;
-                position: relative !important;
-                border-right: 3px #666 outset !important;
-                border-left: 3px #666 outset !important;
-            }
-        }
+@media only screen and (min-width: 600px){
+    .ui-page {
+	width: 600px !important;
+	margin: 0 auto !important;
+	position: relative !important;
+	border-right: 3px #666 outset !important;
+	border-left: 3px #666 outset !important;
+    }
+}
 
 body {
 	padding-bottom: 10px;
@@ -47,6 +47,17 @@ body {
 	color: #444;
 	text-align: center;
 	font-size: 120%;
+}
+
+.option_line {
+	margin-bottom: .8em;
+}
+
+/* vertically align the label with the slider */
+label.ui-slider {
+	display: inline-block;
+	position: relative;
+	bottom: .5em;
 }
 
 .pred_line {
